# SoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: Animation.hpp  Camera.cpp  Camera.hpp  Clipping.hpp  Cube.cpp  Cube.hpp  File.cpp  File.hpp  FileDialog.cpp  FileDialog.hpp  FileDialog.mm  GltfData.hpp  Input.hpp  Joint.hpp  Level.hpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  Node.hpp  RenderEngine.cpp  RenderEngine.hpp  RenderWindowGLFW.hpp  RenderWindowSDL.cpp  RenderWindowSDL.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Transform.cpp  Transform.hpp  Util.hpp  Vector.hpp  Window.cpp  Window.hpp  gltf.json  main.cpp
